syntax = "proto3";
package protos;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/catouberos/geoloc/protos";

service Geolocation {
  rpc CreateGeolocation(GeolocationRequest) returns (GeolocationResponse) {}
}

message GeolocationRequest {
  float degree = 1;
  float latitude = 2;
  float longitude = 3;
  float speed = 4;
  int32 vehicleId = 5;
  int32 routeId = 6;
  google.protobuf.Timestamp timestamp = 7;
}

message GeolocationResponse {
  float degree = 1;
  float latitude = 2;
  float longitude = 3;
  float speed = 4;
  int32 vehicleId = 5;
  int32 routeId = 6;
  google.protobuf.Timestamp timestamp = 7;
}
